add spark benchmark harness